feat:搜索页面分类动态展示hover效果

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,6 +11,9 @@
             "@api/*": [
                 "./src/api/*"
             ],
+            "@components/*": [
+                "./src/components/*"
+            ],
         }
     },
     "exclude": [
