--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.4.5",
     "nprogress": "^0.2.0",
     "router": "^1.3.5",
+    "serve": "^11.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
@@ -28,6 +29,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "mock": "^0.1.1",
+    "mockjs": "^1.1.0",
     "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
