--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nprogress": "^0.2.0",
     "router": "^1.3.5",
     "serve": "^11.3.2",
+    "swiper": "^6.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
