--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "router": "^1.3.5",
     "serve": "^11.3.2",
     "swiper": "^6.3.5",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
