--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.4.4",
     "router": "^1.3.5",
     "serve": "^11.3.2",
     "swiper": "^6.3.5",
